--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "express-handlebars": "^3.0.0",
     "mysql2": "^1.6.5",
     "pug": "^2.0.3",
-    "sequelize": "^5.8.7"
+    "sequelize": "5.8.7"
   }
 }
