--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "1.18.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-session-sequelize": "^6.0.0",
     "cookie-parser": "^1.4.4",
