--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
     "express-validator": "^6.1.1",
+    "multer": "^1.4.2",
     "mysql2": "^1.6.5",
     "nodemailer": "^6.3.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
